--- a/portfolio/portwelcome.html
+++ b/portfolio/portwelcome.html
@@ -17,6 +17,12 @@
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Joti+One&family=LXGW+WenKai+TC&family=Marck+Script&display=swap" rel="stylesheet">
+<!---->
+			<link rel="preconnect" href="https://fonts.googleapis.com">
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Joti+One&family=LXGW+WenKai+TC&family=Marck+Script&display=swap" rel="stylesheet">
+
+			
 
 </head>
 <body>
@@ -28,7 +34,7 @@
 
 			<h1><a href="portwelcome.html">Noah Grucza's Portfolio</a></h1>
 				
-			<img class="pin" src="42.gif" alt="pin">
+			<img class="pinw" src="42.gif" alt="pin">
 		</header>
 
 
@@ -46,13 +52,16 @@
 		
 		<nav class="two">
 			<ul>
-				<li><a href="portwelcome.html">Art</a></li>
+				<li><a class="fix" href="portart.html">Art</a></li>
 			</ul>
 		</nav>
 
 		<nav class="three">
 			<ul>
-				<li><a href="portwelcome.html">School Work</a></li>
+				<li>
+					<a class="fix2" href="#">School Work<img class="con" src="construction.gif" alt="i dont have enough good content yet to make this tab"></a>
+					
+				</li>
 			</ul>
 		</nav>
 
@@ -74,13 +83,22 @@
 			<p>You can start my clicking the navigation buttons up top :3</p>
 		</main>
 
-		<footer>
+		<main class="sg">
 			<img class="spam" src="ezgif-2-477bd08369.gif" alt="spamton">
+		</main>
+
+		<footer>
+			<img class="cd" src="cd.gif" alt="cd">
+			<p class="credit">We're Only Human - Graham Kartna</p>
 		</footer>
 
 
 
-
 	</div>
+
+	<audio controls autoplay >
+		<source src="We're Only Human - Graham Kartna.mp3" type="audio/mpeg">
+	  </audio>
+
 </body>
 </html>
