--- a/portfolio/portart.html
+++ b/portfolio/portart.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My Art</title>
-	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
+	<link href="newport.css" rel="stylesheet" type="text/css">
 
 <!---->
 			<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +51,7 @@
 		<nav class="one">
 			
 			<ul>
-				<li><a href="portwelcome.html">About Me</a></li>
+				<li><a class="text2" href="portme.html">About Me</a></li>
 			</ul>
 		</nav>
 		
