--- a/portfolio/portme.html
+++ b/portfolio/portme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>welcome</title>
+	<title>about me</title>
 	<link href="newport.css" rel="stylesheet" type="text/css">
 
 <!---->
@@ -34,7 +34,7 @@
 
 			<h1><a href="portwelcome.html">Noah Grucza's Portfolio</a></h1>
 				
-			<img class="pinw" src="42.gif" alt="pin">
+			
 		</header>
 
 
@@ -46,7 +46,8 @@
 		<nav class="one">
 			
 			<ul>
-				<li><a class="text2" href="portme.html">About Me</a></li>
+				<img class="pina" src="42.gif" alt="pin">
+				<li><a class="text" href="portme.html">About Me</a></li>
 			</ul>
 		</nav>
 		
@@ -72,24 +73,32 @@
 
 		
 		<main class="m1">
-			<img class="welcome" src="welcome.gif" alt="welcome">
-			<img class="hi" src="hi-hello.gif" alt="hello">
+			
+			
 
 		</main>
 
 
-		<main class="m2">
-			<p>Hello! I hope you have a great time looking through my stuff</p>
-			<p>You can start my clicking the navigation buttons up top :3</p>
+		<main class="mme">
+
+			<img class="snow" src="20240216_105455.jpg" alt="me in the snow">
+
+			<div class="metxt">
+				<p>Hello! my name is Noah Grucza an im 19, most of the time online as of now im called “Mimikwott” or something similar.</p>
+				<p>Ive always loved video games and everything surrounding them, they have changed my life and im currently majoring in game design.</p>
+				<p>sorry I cant really think of much else to say rn</p>
+			</div>
+			
+
 		</main>
 
-		<main class="sg">
-			<img class="spam" src="ezgif-2-477bd08369.gif" alt="spamton">
+		<main >
+			
 		</main>
 
 		<footer>
-			<img class="cd" src="cd.gif" alt="cd">
-			<p class="credit">We're Only Human - Graham Kartna</p>
+			<img class="cdm" src="cd.gif" alt="cd">
+			<p class="credit">An Obsession With Kit - Graham Kartna</p>
 		</footer>
 
 
@@ -97,7 +106,7 @@
 	</div>
 
 	<audio controls autoplay >
-		<source src="We're Only Human - Graham Kartna.mp3" type="audio/mpeg">
+		<source src="An Obsession With Kit - Graham Kartna.mp3" type="audio/mpeg">
 	  </audio>
 
 </body>
