--- a/portfolio/portart.html
+++ b/portfolio/portart.html
@@ -188,8 +188,11 @@
 </main>
 
 	<footer>
+		<img class="noAI" src="a81.gif" alt="no ai!">	
 		<img class="cda" src="cd.gif" alt="cd">
 			<p class="credit">Theme Shop - Nintendo 3ds</p>
+
+		
 	</footer>
 
 
