--- a/portfolio/portme.html
+++ b/portfolio/portme.html
@@ -81,14 +81,19 @@
 
 		<main class="mme">
 
-			<img class="snow" src="20240216_105455.jpg" alt="me in the snow">
-
+			
+				<img class="snow" src="20240216_105455.jpg" alt="me in the snow">
+				
 			<div class="metxt">
-				<p>Hello! my name is Noah Grucza an im 19, most of the time online as of now im called “Mimikwott” or something similar.</p>
+				<p>Hello! my name is Noah Grucza an im 19 y/o college student</p>
 				<p>Ive always loved video games and everything surrounding them, they have changed my life and im currently majoring in game design.</p>
 				<p>sorry I cant really think of much else to say rn</p>
 			</div>
 			
+			<img class="cane" src="722731674.jpg" alt="me holding a giant candy cane">
+			<img class="close" src="IMG_6618.jpg" alt="a funny picture of my face">
+			<img class="boom" src="explode2.gif" alt="funny explosion">
+
 
 		</main>
 
