--- a/portfolio/portwelcome.html
+++ b/portfolio/portwelcome.html
@@ -80,7 +80,7 @@
 
 		<main class="m2">
 			<p>Hello! I hope you have a great time looking through my stuff</p>
-			<p>You can start my clicking the navigation buttons up top :3</p>
+			<p>You can start by clicking the navigation buttons up top :3</p>
 		</main>
 
 		<main class="sg">
